<resources>
    <string name="app_name">Android TrackeR</string>
    <string name="not_available">Not Available</string>
    <string name="no_connection">No Connectivity</string>
    <string name="trackingOn">Tracking mode</string>
    <string name="trackingID">Tracking ID</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="unlock">Unlock</string>
    <string name="enter_id">Enter Unique ID</string>
    <string name="id_entry_error">Unique ID must have have 8 or more characters</string>
    <string name="id_char_error">Id must not contain "\\" and "/" characters.</string>
    <string name="pass_entry_error">Password does not match</string>
    <string name="password_dialog">Parental Lock</string>
    <string name="type_password">Password</string>
    <string name="address_loc_error">Wrong Location: Please Restart TrackR</string>
    <string name="address_not_found">Address Not Found</string>
    <string name="location_message">Location Permission is required for correct application functionality.</string>
    <string name="request_perm">Request</string>
    <string name="new_update_title">New App Update v</string>
    <string name="updateMsg1">- Note that for correct functionality it is essential to update to the latest TrackeR version!</string>
    <string name="updateMsg3">- Crash Fixes.</string>
    <string name="rateApp">Send Feedback</string>
    <string name="rta_dialog_message">TrackR development team is honoured by You using this app. Please take a few seconds and rate this app in Google Store. Also any kind of feedback or feature request is much appreciated.</string>
    <string name="no_thanks">Later</string>
    <string name="rateit">Rate NOW</string>
    <string name="neveragain">Do not show this again</string>
    <string name="friendlyName">Friendly Name</string>
    <string name="deviceId">Device ID</string>
    <string name="alias_required">Friendly name is mandatory field.</string>
    <string name="password_length_wrong">Password length is wrong.</string>
    <string name="google_play_services_outdated">TrackR requires Google Play Services are up to date for correct functionality.</string>
    <string name="resolve">Resolve</string>
    <string name="contact">For support contact pacmac.dev@gmail.com\nThank you for using Device Tracker, p@cmac.</string>
    <string name="update_freq_label">Location update frequency</string>
    <string name="title_activity_add_device">Add New Device</string>
    <string name="title_activity_help">Help</string>
    <string name="title_activity_settings_v2">Settings</string>
    <string name="title_activity_image_chooser">Choose Profile Image</string>

    <string name="dialog_title_exit_activity">Warning</string>
    <string name="dialog_content_exit_activity">Are you sure you want to proceed with unsaved changes?</string>
    <string name="dialog_positive_btn_exit_activity">Yes</string>
    <string name="dialog_title_delete_user">Delete Device profile</string>
    <string name="dialog_content_delete_user">You will permanently remove tracked device from your watch list.</string>
    <string name="dialog_positive_btn_delete_user">Delete</string>
    <string name="dialog_title_track_enable">Setup Tracking</string>
    <string name="dialog_setup">Setup</string>
    <string name="dialog_content_location_settings">This device cannot retrieve GPS or Network location because location feature is disabled. You can fix this by going to phone Settings.</string>
    <string name="dialog_title_location_settings">Location Settings DISABLED</string>
    <string name="dialog_title_missing_permission">"Missing Permission"</string>

    <string name="disclaimer_dialog_text" translatable="false">Please note that Android Device Tracker application purpose is to willingly let your family or friends know about your approximate location. This is NOT a spying or secret surveillance solution. It is your responsibility to ensure that you only share your private unique ID with a party you wish to exchange your data and prevent any abuse of the application. To prevent a misuse we are introducing a persistent notification from where you can turn off location tracking. If you have any concerns please email: pacmac.dev@gmail.com.</string>
    <string name="disclaimer_dialog_title" translatable="false">Privacy Policy Update</string>
    <string name="disclaimer_dialog_exit" translatable="false">EXIT</string>
    <string name="disclaimer_dialog_iagree" translatable="false">I AGREE</string>


    <string name="fixit">Fix Issue</string>
    <string name="fix_location_perm_title">Missing Location Permission</string>
    <string name="fix_location_perm_content">For correct functionality of the Device Tracker it is mandatory to enable location permission. You can do so by going to:\nSettings>Apps>TrackR>Permissions>Enable Location permission.</string>
    <string name="fix_location_settings_content">For correct functionality of the Device Tracker it is mandatory to enable global location settings. Navigate to System Settings>Location: and enable location.</string>
    <string name="fix_gps_version_title">Google Play Service Version Mismatch</string>
    <string name="fix_gps_version_content">For correct functionality of the Device Tracker it is mandatory to update your Google Play Service version to version 9.6.1 or higher.</string>
    <string name="fix_gps_available_title">Google Play Service is NOT Available</string>
    <string name="fix_gps_available_content">For correct functionality of the Device Tracker it is mandatory to update your Google Play Service version to version 11.0.0 or higher.</string>

    <string name="help_header_about">About</string>
    <string name="help_header_contact">Contact</string>
    <string name="help_header_tracking_policy">Tracking Policy</string>
    <string name="help_header_privacy">Privacy Policy</string>
    <string name="help_header_what_is_collected">Data Sharing</string>
    <string name="help_header_how_to">How To Use Device Tracker</string>
    <string name="help_header_how_to_set_tracking">How To Enable Tracking</string>
    <string name="help_header_how_to_set_receiver">How To Add Tracked Device</string>
    <string name="help_header_troubleshooting">Something Is Wrong</string>

     <string name="help_child_about" translatable="false">Android Device Tracker 2016-2018\nDeveloped by p@cmac\nVersion:</string>
    <string name="help_child_contact">If you require any technical support or you want to provide feedback please email:\npacmac.dev@gmail.com\n\nFor feature request please use same email address.</string>
    <string name="help_child_privacy">Information sent between devices based on unique IDs are NOT collected and provided to any 3rd party companies.\nFrom time to time Android Device Tracker may collect network quality data(for instance signal strength) which is further anonymized to prevent any reference to specific user phone. Such network quality data might be forwarded to 3rd parties which are involved in mobile network improvements across the globe.</string>
    <string name="help_child_tracking_policy">@string/disclaimer_dialog_text</string>
    <string name="help_child_what_is_collected">Information sent between phones:\nPhone Location\nTime of location update\nBattery State\nMobile Signal Strength</string>
    <string name="help_child_how_to">Android Device Tracker is application for sharing phone locations between two or more Android devices. Transmitting of phone location is setup using private unique ID available in Settings screen. Transmitting of location updates can be enabled/disabled for this device in Settings including possibility to prevent any further changes by setting a password protection.\nFor receiving of another device location updates the unique ID used in tracked device has to be added into list in main screen.\nThis application works only on Android phones or
        tablets.</string>
    <string name="help_child_how_to_set_tracking">Phone which is intended to provide its location to other phones can be setup in application Settings, where mandatory information is unique ID and tracking mode switch in on position. Optionally if tracking mode is on then this phone can be easily added to main list of tracked devices, additionally frequency of location updates sent by phone can be set in the same menu. Please note that internet connection is required. If no location is sent within few minutes please refer to section "Something Is Wrong" which will automatically appear in this
        list if application sees any obstacle which can affect functionality of this application.</string>
    <string name="help_child_how_to_set_receiver">Adding devices is now simpler than ever and it can be done from the application main screen by tapping on button with plus symbol. You have to set alias for tracked phone and unique ID which is defined in phone which is transmitting its location. Optionally you can set image for better distinction between multiple tracked devices.</string>


    <string name="last_seen">Last seen</string>
    <string name="just_now">Just now</string>
    <string name="ago">ago.</string>

    <string name="sig_poor">Poor</string>
    <string name="sig_bad">Bad</string>
    <string name="sig_average">Average</string>
    <string name="sig_good">Good</string>
    <string name="sig_great">Great</string>

    <string name="lock_settings">Lock Settings</string>
    <string name="show_dev_inlist">Display this device in list</string>
    <string name="show_notification">Notification Enabled</string>
    <string name="invite_friends">Invite Friend</string>
    <string name="help">Help</string>

    <string name="invite_subject">Try this NEW Android TrackeR app!</string>
    <string name="invite_action">Install App</string>
    <string name="dialog_content_track_enable">If you want to enable tracking of this device click YES. Otherwise this device will be only capable to receive other device locations.</string>


    <string name="app_update_needed">App update needed on this phone!</string>

    <string name="check_in_msg" translatable="false">You have just checked in at current location.</string>


</resources>
