<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="52dp"
    android:paddingRight="16dp"
    android:orientation="vertical">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <LinearLayout
                android:id="@+id/locPermission"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="4dp"
                android:paddingBottom="16dp"
                android:orientation="vertical"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:elevation="4dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:text="@string/fix_location_perm_title"
                        android:textSize="16dp"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-small"
                        android:padding="8dp"
                        android:text="@string/fix_location_perm_content"/>

                    <Button
                        android:id="@+id/resolvePermission"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_weight="1"
                        android:background="@drawable/button_white"
                        android:text="@string/resolve"
                        android:textColor="@color/colorPrimary"
                        android:textStyle="bold"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/locGpsVersion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="4dp"
                android:paddingBottom="16dp"
                android:orientation="vertical"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:elevation="4dp"
                    android:orientation="vertical"
                    android:visibility="visible">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:text="@string/fix_gps_version_title"
                        android:textSize="16dp"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-small"
                        android:padding="8dp"
                        android:text="@string/fix_gps_version_content"/>

                    <TextView
                        android:id="@+id/currentGpsVersion"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-small"
                        android:padding="8dp"
                        android:text=""/>


                    <Button
                        android:id="@+id/resolveGooglePlayVersion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_weight="1"
                        android:background="@drawable/button_white"
                        android:text="@string/resolve"
                        android:textColor="@color/colorPrimary"
                        android:textStyle="bold"/>

                </LinearLayout>

            </LinearLayout>


            <LinearLayout
                android:id="@+id/locGpsUnavailable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="4dp"
                android:paddingBottom="16dp"
                android:orientation="vertical"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:elevation="4dp"
                    android:orientation="vertical"
                    android:visibility="visible">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:text="@string/fix_gps_available_title"
                        android:textSize="16dp"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-small"
                        android:padding="8dp"
                        android:text="@string/fix_gps_available_content"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/locationDisabled"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                android:elevation="4dp"
                android:orientation="vertical"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:elevation="4dp"
                    android:orientation="vertical"
                    android:visibility="visible">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:text="@string/fix_location_settings_content"
                        android:textSize="16dp"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-small"
                        android:padding="8dp"
                        android:text="@string/fix_location_settings_content"/>

                    <Button
                        android:id="@+id/resolveLocationDisabled"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_weight="1"
                        android:background="@drawable/button_white"
                        android:text="@string/resolve"
                        android:textColor="@color/colorPrimary"
                        android:textStyle="bold"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

</LinearLayout>